tests/snapshots/asm_snapshots__asm_u64_mul_x86_64@x86_64-unknown-linux-gnu.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
<bigints::u64::Uint64 as core::ops::arith::Mul>::mul:
	mov r8d, edi
	mov eax, edx
	imul rax, r8
	mov r8, rax
	shr r8, 32
	imul ecx, edi
	imul edx, esi
	add edx, ecx
	add edx, r8d
	ret
