tests/snapshots/asm_snapshots__asm_u64_sub.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
.section .text.<bigints::u64::Uint64 as core::ops::arith::Sub>::sub,"ax",@progbits
	.globl	<bigints::u64::Uint64 as core::ops::arith::Sub>::sub
	.p2align	4
.type	<bigints::u64::Uint64 as core::ops::arith::Sub>::sub,@function
<bigints::u64::Uint64 as core::ops::arith::Sub>::sub:
	.cfi_startproc
	mov eax, edi
	sub eax, edx
	sbb esi, ecx
	mov edx, esi
	ret
