tests/snapshots/asm_snapshots__asm_u64_sub_armv7@armv7-unknown-linux-gnueabihf.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
<bigints::u64::Uint64 as core::ops::arith::Sub>::sub:
	cmp r0, r2
	sub r1, r1, r3
	sublo r1, r1, #1
	sub r0, r0, r2
	bx lr
